Fix Reports menu link active state

--- a/schedule/templates/schedule/base.html
+++ b/schedule/templates/schedule/base.html
@@ -68,7 +68,7 @@
                             <a class="nav-link {% if '/csv-upload/' in request.path %}active{% endif %}" href="{% url 'csv_upload' %}">Import/Export</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link {% if '/admin-reports/' in request.path %}active{% endif %}" href="{% url 'admin_reports' %}">Reports</a>
+                            <a class="nav-link {% if '/reports/' in request.path %}active{% endif %}" href="{% url 'admin_reports' %}">Reports</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link {% if '/section-settings/' in request.path %}active{% endif %}" href="{% url 'section_settings' %}">Settings</a>
