--- a/schedule/templates/schedule/csv_upload.html
+++ b/schedule/templates/schedule/csv_upload.html
@@ -1,4 +1,5 @@
 {% extends 'schedule/base.html' %}
+{% load schedule_extras %}
 
 {% block title %}Upload CSV Data{% endblock %}
 
@@ -37,6 +38,41 @@
             </div>
             <button type="submit" class="btn btn-primary">Upload</button>
         </form>
+    </div>
+</div>
+
+<div class="row mt-4">
+    <div class="col-md-12">
+        <div class="card">
+            <div class="card-header">
+                <h3>CSV Format Requirements</h3>
+                <p class="text-muted mb-0">Download template files, fill in your data, and upload them using the form above.</p>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    {% for data_type in data_type_info %}
+                    <div class="col-md-6 mb-4">
+                        <div class="card h-100">
+                            <div class="card-header">
+                                <h4>{{ data_type.display }} Format</h4>
+                            </div>
+                            <div class="card-body">
+                                <p>Required Fields:</p>
+                                <ul>
+                                    {% for header in data_type.headers %}
+                                    <li><code>{{ header }}</code></li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                            <div class="card-footer">
+                                <a href="{% url 'download_template' data_type.type %}" class="btn btn-outline-primary">Download {{ data_type.display }} Template</a>
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
