Fix grade filter to correctly show selected grade after page reload

--- a/schedule/templates/schedule/partials/enrollment/filter_options.html
+++ b/schedule/templates/schedule/partials/enrollment/filter_options.html
@@ -10,7 +10,7 @@
                 <select class="form-select" id="grade" name="grade">
                     <option value="">All Grades</option>
                     {% for grade in grades %}
-                    <option value="{{ grade }}" {% if grade_filter == grade|stringformat:"i" %}selected{% endif %}>
+                    <option value="{{ grade }}" {% if selected_grade == grade|stringformat:"i" %}selected{% endif %}>
                         Grade {{ grade }}
                     </option>
                     {% endfor %}
